{
    "name": "GameInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "0b22ce1f-7d71-4576-9f4a-6d2bd43f137e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "545a100a-ac05-437a-8a44-f37f4076df93",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "87140955-923b-4644-90f3-848fd9245db4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenDoor",
                    "type": "Button",
                    "id": "fac8b9b0-df45-4f3d-acb0-67c5304b7105",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenDridge",
                    "type": "Button",
                    "id": "8ef35d4c-b51b-4e3e-a6d6-eda9db5a7459",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "KeyBoard",
                    "id": "72dd9a0e-be4e-46ef-b48f-f2a0bcdc2a14",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ebf5a08f-adf7-4f53-8c6a-589e3cd5a358",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ff9ab50a-8cb2-4810-a71d-57a5f4062594",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5c190fda-9290-4e27-89f7-2c14d7a52f40",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d9687878-0980-401f-8c69-734190ca0e72",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "16ba5d73-48b5-492f-9425-7bf6ee4184f1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73d749f6-0fbe-408b-b84a-25fcc52c9b44",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenDoor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5de9411-f60f-4181-a794-e10ca409c3bb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenDridge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "46348ce3-dce4-4094-887b-b6dcdb1acb48",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}